--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,9 @@ constraintlayout = "2.2.1"
 foundationLayout = "1.9.3"
 firebaseBom = "33.0.0"
 googleServices = "4.4.2"
+animation = "1.9.4"
+recyclerview = "1.4.0"
+places = "5.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -55,6 +58,9 @@ firebase-database-ktx = { group = "com.google.firebase", name = "firebase-databa
 firebase-functions-ktx = { group = "com.google.firebase", name = "firebase-functions-ktx" }
 firebase-installations = { group = "com.google.firebase", name = "firebase-installations" }
 firebase-perf-ktx = { group = "com.google.firebase", name = "firebase-perf-ktx" }
+androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "animation" }
+androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
