--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 local.properties
 /app/google-services.json
 /app/src/main/assets/trackerpro-a7399-firebase-adminsdk-fbsvc-e5f799a3ce.json
+app/src/main/assets/*.json
+app/src/main/assets/*.json
